--- a/stylesheet.css
+++ b/stylesheet.css
@@ -860,6 +860,7 @@ video{
         margin-left: 15px;
         height: 663px;
         margin-top: 30px;
+        background-color: transparent;
     }
 
     .slide {
