--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1298,6 +1298,117 @@ video{
    
 }*/
 
+@media only screen and (min-width: 600px) {
+    .container-fluid>.navbar-collapse, .container-fluid>.navbar-header, .container>.navbar-collapse, .container>.navbar-header {
+        margin-right: -15px;
+        margin-left: 0px;
+    }
+    .profil{
+        display: flex;
+        flex-direction: row;
+    }
+    .photos {
+        position: relative;
+        width: 84%;
+        left: -120px;
+        top: -100px;
+        background: #D9E355;
+        border-radius: 45px;
+    }
+    #brevepresentation {
+        position: relative;
+        font-size: 24px;
+        width: 57%;
+        padding: 10px;
+        left: 580px;
+        animation-name: presentationreveal;
+        animation-duration: 300ms;
+        animation-timing-function: ease-in-out;
+        animation-fill-mode: forwards;
+        animation-delay: 300ms;
+    }
+    #brevepresentation div {
+        position: relative;
+        left: 145px;
+        text-align: justify;
+        font-size: 20px;
+    }
+    .FrontEndWebChallengeTitel {
+        width: 50%;
+        border-top: 3px solid black;
+        border-bottom: 3px solid black;
+        margin-top: 50px;
+        height: 80px;
+        text-align: center;
+        margin-left: 171px;
+    }
+    .slideConterner {
+        height: 0;
+        margin-left: -91px;
+    }
+    .imageSlide {
+        width: 73%;
+        margin-right: 55px;
+        margin-top: 15px;
+        transition: 0.5s;
+    }
+    .textSlide {
+        width: 80%;
+        font-size: 15px;
+        color: white;
+        padding: 8px 12px;
+        font-family: Verdana, sans-serif;
+        margin-top: 10px;
+        text-align: justify;
+        margin-right: 55px;
+    }
+    .qualitiesMySkill {
+        width: 50%;
+        border-top: 3px solid black;
+        border-bottom: 3px solid black;
+        margin-top: 106px;
+        height: 80px;
+        text-align: center;
+        margin-left: 163px;
+    }
+    .myWeaknesses {
+        display: flex;
+        flex-direction: column;
+        width: 32%;
+        margin-left: 20px;
+        margin-top: 30px;
+        font-size: 11px
+    }
+    .myStrengths {
+        display: flex;
+        flex-direction: column;
+        width: 30%;
+        margin-left: 30px;
+        margin-top: 30px;
+        font-size: 11px;
+    }
+    .myAmbitions {
+        display: flex;
+        flex-direction: column;
+        width: 33%;
+        margin-left: 20px;
+        margin-right: 15px;
+        margin-top: 30px;
+        font-size: 11px;
+    }
+    .navbar-toggle {
+        position: relative;
+        float: right;
+        padding: 9px 10px;
+        margin-right: 15px;
+        top: -68px;
+        margin-bottom: 8px;
+        background-color: transparent;
+        background-image: none;
+        border: 1px solid transparent;
+        border-radius: 4px;
+    }
+}
 
 
 @media only screen and (max-width: 600px) {
