--- a/stylesheet.css
+++ b/stylesheet.css
@@ -651,6 +651,10 @@
         color: whitesmoke;
     }
 
+    .imageFond1, .imageFond2, .imageFond3, .imageFond4, .imageFond5, .imageFond6{
+    display: none;
+   }
+
   }
 
   @media only screen and (min-width: 600px) {
