--- a/stylesheet.css
+++ b/stylesheet.css
@@ -658,6 +658,9 @@
   }
 
   @media only screen and (min-width: 600px) {
+      .imageFond1, .imageFond2, .imageFond3, .imageFond4, .imageFond5, .imageFond6{
+    display: none;
+   }
     .row{
         margin-bottom: 15px;
         box-sizing: border-box;
@@ -1282,6 +1285,10 @@
 
 /*tablet*/
 @media only screen  and (min-width: 601px) and (max-width: 768px){
+    
+    .imageFond1, .imageFond2, .imageFond3, .imageFond4, .imageFond5, .imageFond6{
+    display: none;
+   }
 
     #section1 {
         width: 100%;
@@ -1595,6 +1602,9 @@
 }
 
 @media only screen and (min-width: 769px) and (max-width: 992px) {
+    .imageFond1, .imageFond2, .imageFond3, .imageFond4, .imageFond5, .imageFond6{
+    display: none;
+   }
     #header-nav {
         background-color: #AED2FF;
         border-radius: 0;
