--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1840,6 +1840,9 @@
 }
 
 @media only screen and (min-width: 993px)  and (max-width: 1200px) {
+      .imageFond1, .imageFond2, .imageFond3, .imageFond4, .imageFond5, .imageFond6{
+    display: none;
+   }
     .FrontendSkillsName, .BackendSkillsName {
         padding: 15px;
         font-size: 17px;
