--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2583,7 +2583,7 @@ animation-fill-mode: forwards;
         align-items: center;
         height: 696px;
         width: 100%;
-
+        position: absolute; 
     }
     #photoProfil {
         position: relative;
